# hellointerview-labs

./: .gitattributes  .gitignore  CLAUDE.md  README.md
OnlineAuction/: CLAUDE.md  JOURNAL.md
OnlineAuction/shared/observability/prometheus/: prometheus.yml
OnlineAuction/system/: Makefile  README.md  docker-compose.yml  verify.sh
OnlineAuction/system/api/: Dockerfile  pyproject.toml
OnlineAuction/system/api/app/: cache.py  closer.py  ddb.py  main.py  models.py  redis_client.py
OnlineAuction/system/api/scripts/: exactly_once_close.py  sse_latency.py
OnlineAuction/system/api/tests/: test_cache.py  test_closer.py  test_smoke.py  test_stream.py
OnlineAuction/system/caddy/: Caddyfile
OnlineAuction/system/k6/: cache_load.js  race.js  smoke.js
RateLimiter/: CLAUDE.md  JOURNAL.md  RECAP.md  problem.txt
RateLimiter/labs/00-setup/: Makefile  README.md  docker-compose.yml  verify.sh
RateLimiter/labs/00-setup/caddy/: Caddyfile
RateLimiter/labs/00-setup/chaos/: failover.sh
RateLimiter/labs/00-setup/gateway/: Dockerfile  pyproject.toml
RateLimiter/labs/00-setup/gateway/app/: lua_tokenbucket.py  main.py  redis_tokenbucket.py  tokenbucket.py
RateLimiter/labs/00-setup/gateway/scripts/: tokenbucket.lua
RateLimiter/labs/00-setup/gateway/tests/: test_tokenbucket.py
RateLimiter/labs/00-setup/k6/: burst.js  race.js  smoke.js
RateLimiter/shared/observability/prometheus/: prometheus.yml
Robinhood/: CLAUDE.md  JOURNAL.md  problem.txt
Robinhood/shared/observability/prometheus/: prometheus.yml
Robinhood/system/: Makefile  docker-compose.yml  verify.sh
Robinhood/system/api/: pyproject.toml
Robinhood/system/api/app/: ddb.py  exchange_client.py  main.py  models.py
Robinhood/system/api/tests/: test_smoke.py
Robinhood/system/caddy/: Caddyfile
Robinhood/system/k6/: smoke.js
Robinhood/system/mock-exchange/: pyproject.toml
Robinhood/system/mock-exchange/app/: main.py
