[project]
name = "auction-api"
version = "0.0.1"
description = "OnlineAuction api — FastAPI + DynamoDB Local."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "prometheus-client==0.20.0",
    "aioboto3==13.2.0",
    "pydantic==2.13.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"

[tool.uv]
package = false
