[project]
name = "broker-api"
version = "0.0.1"
description = "Robinhood broker api — FastAPI + DynamoDB Local + httpx to mock-exchange."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "prometheus-client==0.20.0",
    "aioboto3==13.2.0",
    "pydantic==2.13.3",
    "httpx==0.27.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"

[tool.uv]
package = false
