[project]
name = "mock-exchange"
version = "0.0.1"
description = "Mock external exchange — sync REST place/cancel + idempotent on client_order_id. Trade feed lands in lab 1."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "prometheus-client==0.20.0",
    "pydantic==2.13.3",
]

[tool.uv]
package = false
